[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[project]
name = "sqladmin"
version = "0.22.0"
description = 'SQLAlchemy admin for FastAPI and Starlette'
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
keywords = ["sqlalchemy", "fastapi", "starlette", "admin"]
authors = [{ name = "Amin Alaee", email = "me@aminalaee.dev" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Topic :: Internet :: WWW/HTTP",
  "Operating System :: OS Independent",
]
dependencies = [
  "starlette",
  "wtforms >=3.1, <3.2",
  "jinja2",
  "python-multipart",
  "sqlalchemy>=1.4, <2.0",
]


[project.optional-dependencies]
full = ["itsdangerous"]

[project.urls]
Documentation = "https://aminalaee.github.io/sqladmin/"
Issues = "https://github.com/aminalaee/sqladmin/issues"
Source = "https://github.com/aminalaee/sqladmin"


[dependency-groups]
dev = [
  "aiosqlite",
  "arrow",
  "asyncpg",
  "babel",
  "build",
  "colour",
  "coverage",
  "email-validator",
  "fastapi-storages",
  "greenlet",
  "httpx",
  "itsdangerous",
  "phonenumbers",
  "pillow",
  "psycopg2-binary",
  "psycopg[binary]",
  "pytest",
  "python-dateutil",
  "sqlalchemy_utils",
]

lint = [
  "mypy==1.18.1",
  "ruff==0.1.5",
  "pylint>=4.0.4",
  "types-wtforms>=3.2.1.20250809",
]

docs = [
  "mkdocs-material==9.6.14",
  "mkdocs==1.6.1",
  "mkdocstrings[python]==0.26.1",
]


# -----------------------------
# OTHER ORIGINAL TOOL CONFIG
# -----------------------------
[tool.uv.build-backend]
module-root = ""

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
check_untyped_defs = true
disallow_any_unimported = true
strict_optional = true
no_implicit_optional = true
disable_error_code = [
  "var-annotated"
]

[tool.pylint.MASTER]
disable = [
  "missing-module-docstring",      # C0114
  "missing-class-docstring",       # C0115
  "missing-function-docstring",    # C0116
  "too-many-instance-attributes",  # R0902
  "too-few-public-methods",        # R0903
  "too-many-public-methods",       # RO904
  "too-many-arguments",            # R0913
  "too-many-locals",               # R0914
  "too-many-positional-arguments", # R0917
  "protected-access",              # W0212
  "fixme",                         # W0511
]
fail-under = 9.50

[tool.ruff]
select = ["E", "F", "I"]

[tool.coverage.run]
source_pkgs = ["sqladmin", "tests"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "pragma: nocover",
  "except NotImplementedError",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]
