[metadata]
name = sqladmin
version = attr: sqladmin.__init__.__version__
author = Amin Alaee
author_email = mohammadamin.alaee@gmail.com
description = Admin interface for SQLAlchemy.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sqlalchemy-admin/sqlalchemy-admin
license = BSD
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.7
install_requires =
    sqlalchemy >=1.4, <1.5
    jinja2 >=3, <4
    wtforms >=3, <4

[options.package_data]
starlette = py.typed

[options.packages.find]
exclude =
    tests*

[options.extras_require]
starlette =
    starlette
    uvicorn


[flake8]
ignore = E203
max-line-length = 88

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True
show_error_codes = True

[tool:isort]
profile = black
combine_as_imports = True

[coverage:run]
source_pkgs = sqladmin, tests
