[metadata]
name = sqladmin
version = 0.1.9
author = Amin Alaee
author_email = mohammadamin.alaee@gmail.com
description = Admin interface for SQLAlchemy.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aminalaee/sqladmin
license = BSD
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.7
install_requires =
    starlette
    jinja2
    sqlalchemy >=1.4, <1.5
    wtforms >=3, <4
    python-multipart

[options.package_data]
sqladmin = py.typed

[options.packages.find]
exclude =
    tests*

[flake8]
ignore = E203, W503
max-line-length = 88

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True
show_error_codes = True

# [mypy-tests.*]
# Not yet supported in mypy
# https://github.com/python/mypy/issues/9440
# disable_error_code = no-redef

[tool:isort]
profile = black
combine_as_imports = True

[coverage:run]
source_pkgs = sqladmin, tests

[coverage:report]
exclude_lines =
    pragma: no cover
    pragma: nocover
    except NotImplementedError
    raise NotImplementedError
    if TYPE_CHECKING:
